# Compiler-frontend

./: .gitignore  README.md  plan1.md  pyproject.toml  run.md
compiler_ir/: .gitignore  CMakeLists.txt  Readme.md  main.cpp  output.ll
compiler_ir/include/: BasicBlock.h  Constant.h  Function.h  GlobalVariable.h  IRGenerator.h  IRbuilder.h  IRprinter.h  Instruction.h  Module.h  SLRParser.h  Type.h  User.h  Value.h  ast.h  automata.h  lexer.h  slr_parser_a.h  slr_parser_b.h  symtable.h  token.h
compiler_ir/include/common/: symtable.h  token.h
compiler_ir/include/lexer/: automata.cpp  automata.h  lexer.cpp  lexer.h  test_main.cpp
compiler_ir/src/: BasicBlock.cpp  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRGenerator.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  SLRParser.cpp  Type.cpp  User.cpp  Value.cpp  ast.cpp  automata.cpp  lexer.cpp  slr_parser_a.cpp  slr_parser_b.cpp
compiler_ir/src/lexer/: automata.cpp  lexer.cpp
compiler_ir/tests/: README.md  test_main.cpp
compiler_ir/tests/ir_cases/: ir04_assign.sy  ir06_if_else.sy  ir07_const.sy
compiler_ir/tests/ir_cases/expected/: ir01_global.ll.golden  ir05_arithmetic.ll.golden  ir06_if_else.ll.golden  ir07_const.ll.golden
compiler_ir/tests/lexer/: member3_build_tables.cpp  test_main.cpp
compiler_ir/tests/lexer_cases/: 03_const.sy  04_keywords.sy  05_operators.sy  06_comment.sy  07_comprehensive.sy
compiler_ir/tests/parser_b_cases/: case10_logic.sy  case7_assign.sy  case9_if_else.sy  expected.md
compiler_ir/tests/scripts/: compare_outputs.py  run_all_tests.sh
(+45 files in other folders)
